fix(fu-439): fixed button text vertical align to center in multi-select dropdown

--- a/projects/fusion-ui/components/button/v3/button.component.scss
+++ b/projects/fusion-ui/components/button/v3/button.component.scss
@@ -6,15 +6,11 @@
 // small
 $smallMinWidth: 66px;
 $smallHeight: 24px;
-$smallPadding: 4px 12px 5px;
-$smallPaddingWithIcon: 3px 10px 4px 8px;
-$smallPaddingWithIconRight: 3px 28px 4px 10px;
-$smallPaddingWithLoading: 9px 16px;
 
 // medium - default
 $mediumMinWidth: 74px;
 $mediumHeight: 32px;
-$mediumPadding: 8px 16px 8px;
+$mediumPadding: 8px 16px;
 $mediumPaddingWithIcon: 8px 16px 8px 12px;
 $mediumPaddingWithIconRight: 8px 30px 8px 12px;
 $mediumPaddingWithLoading: 7px 23px 7px;
@@ -77,7 +73,6 @@ $buttonBorderRadius: 100px;
 
     &.small {
         height: $smallHeight;
-        padding: $smallPadding;
         @extend %font-bodyXSmall;
     }
 
@@ -203,7 +198,6 @@ $buttonBorderRadius: 100px;
                 };
 
                 &.small {
-                    padding: $smallPaddingWithIconRight;
                     > span > span {
                         padding: 0;
                     }
@@ -230,7 +224,6 @@ $buttonBorderRadius: 100px;
             &.small {
                 height: $smallHeight;
                 width: fit-content;
-                padding: $smallPaddingWithIcon;
                 > span > span {
                     padding-left: 4px;
                 }
@@ -341,10 +334,6 @@ $buttonBorderRadius: 100px;
                 &.transparent:not(.danger) {
                     background-color: transparent;
                 }
-                &.small {
-                    padding: $smallPaddingWithLoading;
-                }
-
                 &.large {
                     padding: $largePaddingWithLoading;
                 }
@@ -382,10 +371,6 @@ $buttonBorderRadius: 100px;
         &.danger {
             color: $White;
             background-color: $fu-negative-500;
-        }
-
-        &.small {
-            padding: $smallPaddingWithLoading;
         }
 
         &.large{
